# WLib_leg

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
WLib/: CMakeLists.txt
WLib/WLib_CRC/: CMakeLists.txt
WLib/WLib_CRC/example/: CMakeLists.txt
WLib/WLib_CRC/implementation/: crc_16_ccitt_false.cpp  crc_16_ccitt_false.hpp  crc_32.cpp  crc_32.hpp  crc_64_go_iso.cpp  crc_64_go_iso.hpp  crc_8.cpp  crc_8.hpp
WLib/WLib_CRC/interface/: WLib_CRC_16_ccitt_false.hpp  WLib_CRC_32.hpp  WLib_CRC_64_go_iso.hpp  WLib_CRC_8.hpp  WLib_CRC_Interface.hpp
WLib/WLib_CRC/test/: CMakeLists.txt  tst_crc_64_go_iso.cpp
WLib/WLib_Driver/FRAM/: CMakeLists.txt
WLib/WLib_Driver/FRAM/MB85RS64V/: CMakeLists.txt
WLib/WLib_Driver/FRAM/MB85RS64V/implementation/: WLib_Driver_MB85RS64V.cpp
WLib/WLib_Driver/FRAM/MB85RS64V/interface/: WLib_Driver_MB85RS64V.hpp
WLib/WLib_SPI_Abstraction/: CMakeLists.txt  README.md
WLib/WLib_SPI_Abstraction/example/: CMakeLists.txt  exa_spi_abstraction.cpp
WLib/WLib_SPI_Abstraction/implementation/: WLib_SPI_Abstraction.cpp
WLib/WLib_SPI_Abstraction/interface/: WLib_SPI_Abstraction.hpp
WLib/WLib_SPI_Abstraction/test/: CMakeLists.txt  tst_spi_abstraction.cpp
WLib/WLib_Serializer/: CMakeLists.txt
WLib/WLib_Serializer/example/: CMakeLists.txt  exa_serializer.cpp
WLib/WLib_Serializer/implementation/: WLib_Serializer.cpp
WLib/WLib_Serializer/interface/: WLib_Serializer.hpp
WLib/WLib_Serializer/test/: CMakeLists.txt  tst_serializer.cpp
WLib/WLib_StateMachine/: CMakeLists.txt
WLib/WLib_StateMachine/example/: CMakeLists.txt
WLib/WLib_StateMachine/implementation/: WLib_StateMachine.cpp
WLib/WLib_StateMachine/interface/: WLib_StateMachine.hpp
WLib/WLib_StateMachine/test/: CMakeLists.txt  tst_state_machine.cpp
WLib/WLib_Utility/: CMakeLists.txt
WLib/WLib_Utility/example/: CMakeLists.txt
WLib/WLib_Utility/implementation/: WLib_Utility.cpp
WLib/WLib_Utility/interface/: WLib_Utility.hpp
WLib/WLib_Utility/test/: CMakeLists.txt  tst_utility.cpp
doc_template/: documentation_template.tex
doc_template/ess/: arc.uxf  dependency.uxf
examples/: CMakeLists.txt
examples/WLib_CRC/: CMakeLists.txt  exa_crc.cpp
examples/WLib_SPI_Abstraction/: CMakeLists.txt  exa_spi_abstraction.cpp
examples/WLib_Serializer/: CMakeLists.txt  exa_serializer.cpp
examples/WLib_StateMachine/: CMakeLists.txt  exa_StateMachine.cpp
examples/WLib_Utility/: CMakeLists.txt  exa_utility.cpp
tests/: CMakeLists.txt
tests/WLib_CRC/: CMakeLists.txt  tst_crc_16_ccitt_false.cpp  tst_crc_32.cpp  tst_crc_64_go_iso.cpp  tst_crc_8.cpp
tests/WLib_Driver/: CMakeLists.txt
tests/WLib_Driver/FRAM/MB85RS64V/: CMakeLists.txt  tst_Driver_MB85RS64V.cpp
tests/WLib_SPI_Abstraction/: CMakeLists.txt  tst_spi_abstraction.cpp
tests/WLib_Serializer/: CMakeLists.txt  tst_main.cpp  tst_serializer.cpp
tests/WLib_StateMachine/: CMakeLists.txt  tst_state_machine.cpp
tests/WLib_Utility/: CMakeLists.txt  tst_utility.cpp
